Improved restart controll add graphic

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <h1>Campo Minato</h1>
         </div>
         <div class="play">
+            <label for="difficulty">Scegli livello di difficoltà: </label>
           <select  id="difficulty">
             <option value="10" selected>Easy</option>
             <option value="9">Medium</option>
@@ -31,9 +32,10 @@
     </header>
     <main>
         <div id="start-play">
-            <h1>PREMI PLAY PER INIZIARE</h1>
+            <h1>SCEGLI DIFFICOLTA E PREMI PLAY PER INIZIARE</h1>
         </div>
         <div class="disp-none" id="grid"></div>
+        <div id="user-display" class="disp-none"></div>
     </main>
     <footer>
         <div>Made whit &#128420; by <a href="#">Boolean</a></div>
