--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Marco Calabretta">
     <meta name="description" content="Boiler plate">
     <title>Campo minato</title>
+    <link rel="icon" href="img/frenzic_nuke.ico">
 
     <!-- LINK FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
